--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.10",
     "morgan": "^1.10.0",
-    "ts-node": "^10.4.0"
+    "ts-node": "^10.4.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.2",
@@ -32,6 +33,7 @@
     "@types/mongoose": "^5.10.5",
     "@types/morgan": "^1.9.2",
     "@types/node": "^15.3.1",
+    "@types/uuid": "^8.3.4",
     "ts-node-dev": "^1.1.6",
     "typescript": "^4.2.4"
   }
