--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "react-router": "^6.2.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "4.0.3",
+    "styled-components": "^5.3.3",
     "typescript": "^4.2.4",
     "web-vitals": "^1.1.2",
     "yup": "^0.32.11"
@@ -40,7 +41,6 @@
     ]
   },
   "devDependencies": {
-    "@types/react-redux": "^7.1.22",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -48,6 +48,8 @@
     "@types/node": "^12.20.13",
     "@types/react": "^17.0.6",
     "@types/react-dom": "^17.0.5",
+    "@types/react-redux": "^7.1.22",
+    "@types/styled-components": "^5.1.23",
     "@types/yup": "^0.29.13",
     "antd": "^4.18.6"
   }
