--- a/client/package.json
+++ b/client/package.json
@@ -51,6 +51,7 @@
     "@types/react-redux": "^7.1.22",
     "@types/styled-components": "^5.1.23",
     "@types/yup": "^0.29.13",
-    "antd": "^4.18.6"
+    "antd": "^4.18.6",
+    "axios-mock-adapter": "^1.20.0"
   }
 }
