--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.10",
     "morgan": "^1.10.0",
+    "multer": "^1.4.4",
+    "multer-gridfs-storage": "^5.0.2",
     "ts-node": "^10.4.0",
     "uuid": "^8.3.2"
   },
