--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "multer": "^1.4.4",
     "multer-gridfs-storage": "^5.0.2",
     "pg": "^8.7.3",
+    "sequelize": "^6.21.3",
     "ts-node": "^10.4.0",
     "uuid": "^8.3.2"
   },
@@ -36,6 +37,7 @@
     "@types/morgan": "^1.9.2",
     "@types/node": "^15.3.1",
     "@types/uuid": "^8.3.4",
+    "sequelize-typescript": "^2.1.3",
     "ts-node-dev": "^1.1.6",
     "typescript": "^4.2.4"
   }
