--- a/server/.sequelizerc
+++ b/server/.sequelizerc
@@ -1,8 +1,8 @@
-const path = require('path');
+const path = require("path");
 
 module.exports = {
-  "config": path.resolve('./config', 'database.ts'),
-  "models-path": path.resolve('./models'),
-  "seeders-path": path.resolve('./seeders'),
-  "migrations-path": path.resolve('./migrations')
+  config: path.resolve("./src/config", "configForMigaration.json"),
+  "models-path": path.resolve("./src/models"),
+  "seeders-path": path.resolve("./src/seeders"),
+  "migrations-path": path.resolve("./src/migrations"),
 };
