--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "start": "node dist/index.js",
-    "dev": "ts-node index.ts",
+    "dev": "ts-node-dev index.ts",
     "build": "tsc"
   },
   "keywords": [],
