--- a/server/package.json
+++ b/server/package.json
@@ -1,15 +1,18 @@
 {
-  "name": "percuciat",
+  "name": "express-ps-backend",
   "version": "1.0.0",
   "description": "",
   "main": "dist/index.js",
   "scripts": {
     "start": "node dist/index.js",
     "dev": "ts-node-dev index.ts",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
     "build": "tsc"
   },
   "keywords": [],
-  "author": "",
+  "author": "percuciat",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
@@ -24,7 +27,6 @@
     "multer-gridfs-storage": "^5.0.2",
     "pg": "^8.7.3",
     "sequelize": "^6.21.3",
-    "ts-node": "^10.4.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
@@ -34,14 +36,20 @@
     "@types/cors": "^2.8.10",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.11",
+    "@types/jest": "^29.0.0",
     "@types/jsonwebtoken": "^8.5.6",
     "@types/morgan": "^1.9.2",
     "@types/node": "^15.3.1",
+    "@types/supertest": "^2.0.12",
     "@types/uuid": "^8.3.4",
     "compression": "^1.7.4",
+    "jest": "^28.1.3",
     "sequelize-cli": "^6.4.1",
     "sequelize-typescript": "^2.1.3",
-    "ts-node-dev": "^1.1.6",
+    "supertest": "^6.2.4",
+    "ts-jest": "^28.0.8",
+    "ts-node": "^10.9.1",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^4.2.4"
   }
 }
