--- a/server/package.json
+++ b/server/package.json
@@ -47,9 +47,12 @@
     "sequelize-cli": "^6.4.1",
     "sequelize-typescript": "^2.1.3",
     "supertest": "^6.2.4",
+    "swagger-jsdoc": "^6.2.5",
+    "swagger-ui-express": "^4.5.0",
     "ts-jest": "^28.0.8",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^4.2.4"
+    "typescript": "^4.2.4",
+    "yamljs": "^0.3.0"
   }
 }
