--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -2,11 +2,7 @@
   "compilerOptions": {
     "target": "es5",
     "baseUrl": "./src",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
+    "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
@@ -22,10 +18,8 @@
     "jsx": "react-jsx",
     "noImplicitAny": false,
     "typeRoots": [
-      "./src/@types"
+      "./src/@types", "./node_modules/@types"
     ]
   },
-  "include": [
-    "src"
-  ]
+  "include": ["src"]
 }
