--- a/client/package.json
+++ b/client/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@reduxjs/toolkit": "^1.7.2",
+    "@reduxjs/toolkit": "^1.8.5",
     "axios": "^0.25.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -15,8 +15,7 @@
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.3",
     "typescript": "^4.2.4",
-    "web-vitals": "^1.1.2",
-    "yup": "^0.32.11"
+    "web-vitals": "^1.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -52,8 +51,7 @@
     "@types/react-dom": "^17.0.5",
     "@types/react-redux": "^7.1.22",
     "@types/styled-components": "^5.1.23",
-    "@types/yup": "^0.29.13",
-    "antd": "^4.18.6",
+    "antd": "^4.23.1",
     "axios-mock-adapter": "^1.20.0"
   }
 }
